temp fix throw buttons off screen outta sight

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,32 +34,34 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
+  position: absolute;
   z-index: 999;
   font-size: calc(1rem + .4vw);
-  top: 5rem;
-  left: -10rem;
+  top: -10rem;
+  left: -17rem;
   padding: .5em .5em;
   background-color: rgb(55, 255, 0);
   color: rgb(0, 0, 0);
   font-weight: 900;
   font-family: Pokemon-Classic;
+  white-space: nowrap;
 }
 
 .newGame {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
+  position: absolute;
   z-index: 999;
   font-size: calc(1rem + .4vw);
-  top: 1rem;
-  left: 11rem;
+  top: -10rem;
+  left: 7rem;
   padding: .5em .5em;
   background-color: rgb(0, 8, 255);
   color: rgb(0, 2, 12);
   font-weight: 900;
   font-family: Pokemon-Classic;
+  white-space: nowrap;
 }
 
 .saveGameButton {
@@ -99,6 +101,26 @@ body {
     top: 20rem;
     left: 10rem;
     font-family: Pokemon-Classic;
+}
+
+.createNewRecordMessage {
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  position: absolute;
+  background-color: #ff0000;
+  border: none;
+  color: rgb(12, 0, 0);
+  padding: .5em .5em;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: calc(1rem + .7vw);
+  z-index: 999;
+  top: -10rem;
+  left: -29rem;
+  font-family: Pokemon-Classic;
+  white-space: nowrap;
 }
 
 .pixel-art {
